tests/errors/tc_expr_alloc_nonnumeric.lx
@module "main"

pub const main -> fn () int {
    alloc("hello");
    return 0;
}
